--- a/PurchaseMate/Base.lproj/Main.storyboard
+++ b/PurchaseMate/Base.lproj/Main.storyboard
@@ -128,6 +128,7 @@
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="6MM-l4-w2V">
+                        <barButtonItem key="backBarButtonItem" title=" " id="B5F-Qt-UEi"/>
                         <barButtonItem key="rightBarButtonItem" title="Report" id="mvo-j2-sRD">
                             <connections>
                                 <segue destination="Vsz-LZ-4B9" kind="show" id="SNL-e9-r7j"/>
@@ -204,6 +205,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="75o-er-oDa">
+                        <barButtonItem key="backBarButtonItem" title=" " id="Fci-6k-XAg"/>
                         <barButtonItem key="rightBarButtonItem" title="Submit" id="OdX-2Y-lrG">
                             <connections>
                                 <action selector="submitAction:" destination="Vsz-LZ-4B9" id="J9S-kk-XRl"/>
